# tcrd

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
migrations/: 20231118094556_create_cards.up.sql  20231118115203_create_balances.up.sql  20231118124038_create_packs.down.sql  20231118124038_create_packs.up.sql  20231118132923_create_users_cards.down.sql  20231118132923_create_users_cards.up.sql  20231119140320_create_user_stats.up.sql  20231201182147_create_fight_queue.down.sql  20231201182147_create_fight_queue.up.sql  20231220144506_add_event_pack.down.sql  20231220144506_add_event_pack.up.sql  20231220145557_add_card_obtainable.down.sql  20231220145557_add_card_obtainable.up.sql
src/: create_user.rs  default_packs.rs  main.rs  paginate_cards.rs
src/cards/: card.rs
src/commands/: balances.rs  cards.rs  fight.rs  help.rs  leaderboard.rs  manage.rs  mod.rs  packs.rs  profile.rs  trade.rs
