[package]
name = "tcrd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["clock"] }
poise = "0.5.6"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "migrate", "macros" ] }
rand = "0.8.5"
futures = "0.3.29"
redis = { version = "0.23.3", features = ["tokio-comp"] }