[package]
name = "tcrd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["clock"] }
poise = "0.5.6"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "migrate", "macros", "bigdecimal" ] }
rand = "0.8.5"
futures = "0.3.29"
redis = { version = "0.23.3", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
rust-s3 = "0.33.0"
reqwest = "0.11.22"
urlencoding = "2.1.3"
