[package]
name = "tcrd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["clock"] }
poise = "0.6.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "migrate", "macros", "bigdecimal", "time" ] }
rand = "0.9.2"
futures = "0.3.29"
redis = { version = "0.32.7", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
dotenv = "0.15.0"
rust-s3 = "0.37.0"
reqwest = "0.12"
urlencoding = "2.1.3"
humantime = "2.3.0"
